<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="6"
    >
  <Button
      android:layout_weight="1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/first"
      android:textSize="30sp"
      android:backgroundTint="@color/Tomato"
      />

  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/second"
      android:textSize="30sp"
      android:backgroundTint="@color/Gold"

      />

  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/third"
      android:textSize="30sp"
      android:textColor="@color/black"
      android:backgroundTint="@color/LavenderBlush"

      />
<TextView
    android:layout_weight="1"
    android:text="@string/hello_android_class"
    android:textSize="30sp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
android:gravity="center"    />



  <LinearLayout
      android:gravity="center"
      android:layout_weight="2"
      android:background="@color/white"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <EditText
        android:hint="@string/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/password"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
  </LinearLayout>
</LinearLayout>